# PipeSort

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: algorithm.md
include/pipesort/: pipesort.h  psort.h
internal/: pipe_sort_u128.c  pipe_sort_u256_idx_radix8.c  pipe_sort_u256_idx_radix8.h  pipe_sort_u512_idx_radix8.c  pipe_sort_u512_idx_radix8.h  u256.h  u512.h
src/: psort_u.c  psort_u128.c  psort_u256.c  psort_u512.c
tests/: bench_u128_qsort.c  test_all.c
u128_locked_c/: main_bench.c  pipe_sort_u128.c  pipe_sort_u128.h  u128.h
u128_locked_cpp/: main_bench.cpp  pipe_sort_u128.cpp  pipe_sort_u128.hpp  u128.hpp
universal_cpp/: main.cpp  pipe_sort.cpp  pipe_sort.h
